--- a/src/assets/css/icon.css
+++ b/src/assets/css/icon.css
@@ -2,7 +2,7 @@
  content:url("data:image/svg+xml,%3csvg width='16' height='10' viewBox='0 0 16 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3e %3cpath d='M12.01 3.65891H0V5.81888H12.01V9.05884L16 4.73889L12.01 0.418945V3.65891Z' fill='white'/%3e %3c/svg%3e")
 }
 .icon_dot:after {
- content:url(data:image/svg+xml,)
+ content:url("data:image/svg+xml,%3csvg width='10' height='10' viewBox='0 0 10 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3e %3cpath d='M4.8685 0.569176L0 5L4.8685 9.43082L9.737 5L4.8685 0.569176Z' fill='%23FE5F5F'/%3e %3c/svg%3e")
 }
 .icon_label:after {
  content:url("data:image/svg+xml,%3csvg width='84' height='52' viewBox='0 0 84 52' fill='none' xmlns='http://www.w3.org/2000/svg'%3e %3cpath d='M29.0317 38.3278L36.1183 45.4189L43.2048 38.3278L36.1183 31.2366L29.0317 38.3278Z' fill='%23FE5F5F'/%3e %3cpath d='M37.9249 29.4631L45.0115 36.5542L52.0981 29.4631L45.0115 22.3721L37.9249 29.4631Z' fill='%23FE5F5F'/%3e %3cpath d='M29 20.5105L36.0865 27.6017L43.173 20.5105L36.0865 13.4193L29 20.5105Z' fill='%23FE5F5F'/%3e %3cpath d='M51.6081 38.3278L58.6946 45.4189L65.7811 38.3278L58.6946 31.2366L51.6081 38.3278Z' fill='%23FE5F5F'/%3e %3cpath d='M60.5013 29.4631L67.5879 36.5542L74.6745 29.4631L67.5879 22.3721L60.5013 29.4631Z' fill='%23FE5F5F'/%3e %3cpath d='M51.5762 20.5105L58.6627 27.6017L65.7492 20.5105L58.6627 13.4193L51.5762 20.5105Z' fill='%23FE5F5F'/%3e %3c/svg%3e")
